--- a/style/main.css
+++ b/style/main.css
@@ -4,28 +4,37 @@
     text-align: center;
 }
 
-body {
-    background-color: rgb(232, 210, 182);
-}
-
 #main-heading {
-    color: red;
+    color: black;
     font-size: 3.4rem;
 }
 
 .game-container {
-    margin: 12px 2px;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    color: black;
+    background-color: #455361;
     display: grid;
-    justify-content: center;
-    grid-template-columns: auto auto auto;
+    border: 4px solid #2c3e50;
+    grid-template: repeat(3,1fr)/repeat(3,1fr);
 }
 
 .cell {
-    margin: 4px;
-    border: 1px solid gray;
-    border-radius: 6px;
-    font-size: 30px;
+    border: 4px solid #2c3e50;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.4rem;
     cursor: pointer;
+}
+
+.cell:hover{
+    background-color: rgb(61, 107, 91);
+}
+
+.game-status{
+    cursor:pointer;
 }
 
 #game-restart {
@@ -34,12 +43,12 @@ body {
     border-radius: 4%;
     font-size: 1.2rem;
     padding: 8px 16px;
-    background-color: blue;
+    background-color: #34495e;
     color: white;
     cursor: pointer;
 }
 
 #game-restart:hover {
-    background-color: white;
-    color: blue;
+    background-color: rgb(61, 107, 91);
+    color: black;
 }
